# aochs

./: .gitignore  01.hs  02.hs  03.hs  04.hs  06.hs  07.hs  11.hs  readme.md
2025/01/: x01.cabal
2025/01/app/: Main.hs
2025/02/: x02.cabal
2025/02/app/: Main.hs
2025/03/: LICENSE  x03.cabal
2025/03/app/: Main.hs
2025/04/: x04.cabal
2025/04/app/: Main.hs
2025/05/: x05.cabal
2025/05/app/: Main.hs
